backend/infra/k8s/travolta-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travolta-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travolta
  template:
    metadata:
      labels:
        app: travolta
    spec:
      containers:
        - name: travolta
          image: jasimawan/travolta
---
apiVersion: v1
kind: Service
metadata:
  name: travolta-srv
spec:
  selector:
    app: travolta
  type: ClusterIP
  ports:
    - name: travolta
      protocol: TCP
      port: 3000
      targetPort: 3000
